# 275-Mini1

./: CMakeLists.txt  README.md  run10x.sh
src_phase1/: DataLoader.cpp  DataLoader.h  Main.cpp  SearchEngine.cpp  main.cpp
src_phase1.1/: Crash.h  CrashData.cpp  CrashData.h  Main.cpp
src_phase1.2/: Crash.h  CrashData.cpp  Main.cpp
src_phase1_archive/src_phase1.1/: Crash.h  CrashData.h
src_phase1_archive/src_phase1.2/: CrashData.cpp
src_phase2/: CollisionData.h  CrashData.cpp  DataLoader.cpp  SearchEngine.cpp  SearchEngine.h  main.cpp
src_phase2.3/: Main.cpp  main.cpp
src_phase2_archive/src_phase2.1/: CrashData.cpp
src_phase2_archive/src_phase2.2/: CrashData.cpp
src_phase2_archive/src_phase2.3/: Main.cpp
src_phase3.1/: Crash.h  CrashData.cpp  CrashData.h  main.cpp
